--- a/index.html
+++ b/index.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Autofill test</title>
+<meta charset="utf-8">
+<title>Autofill to VCF</title>
 <meta name=viewport content="width=device-width, initial-scale=1">
-
-  <style>
-label {display: flex; background-color: gold;}
-body { font-size: 2em; }
-input {
-	flex: 1;
-    padding: 0.4em;
-    font-size: 3em;
-}
-p { border: thin solid black; width: 100%; }
-  </style>
+<link href="style.css" rel="stylesheet">
 </head>
 <body>
 
-
 <form action=http://software.hixie.ch/utilities/cgi/test-tools/echo method=post autocomplete=on>
-	<p><label>Name <input type=text name=name></label>
-	<p><label>Address <input type=text name=address></label>
-	<p><label>City <input type=text name=city></label>
-	<p><label>Postcode <input type=text name=postcode></label>
-	<p><label>Phone <input type=text name=phone></label>
-	<p><label>Email <input type=text name=email></label>
-	<p><input type=submit value="Continue...">
+<label>Name <input required type=text name=name></label>
+<label>Company <input required type=text name=organization></label>
+<label>Address <input type=text name=address-line1></label>
+<label>City <input type=text name=address-level2></label>
+<label>Country <input type=text name=country-name></label>
+<label>Postcode <input type=text name=postal-code></label>
+<label>Phone <input type=tel name=tel></label>
+<label>Email <input required type=email name=email></label>
+<label>URL <input type=url name=url></label>
+<input type=submit value="Continue...">
 </form>
 
-<p><a href=https://html.spec.whatwg.org/multipage/forms.html#autofill>HTML autofill</a>
+
+
 </body>
 </html>
