--- a/index.html
+++ b/index.html
@@ -2,26 +2,30 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Autofill to VCF</title>
+<meta name="robots" content="noindex">
+<title>JS Bin</title>
 <meta name=viewport content="width=device-width, initial-scale=1">
-<link href="style.css" rel="stylesheet">
+<style id="jsbin-css">
+form { display: flex; flex-direction: column; }
+input { font-size: 2em; padding: 0.4em;
+box-sizing: border-box;  display: block;
+}
+</style>
 </head>
 <body>
 
-<form action=http://software.hixie.ch/utilities/cgi/test-tools/echo method=post autocomplete=on>
-<label>Name <input required type=text name=name></label>
-<label>Company <input required type=text name=organization></label>
-<label>Address <input type=text name=address-line1></label>
-<label>City <input type=text name=address-level2></label>
-<label>Country <input type=text name=country-name></label>
-<label>Postcode <input type=text name=postal-code></label>
-<label>Phone <input type=tel name=tel></label>
-<label>Email <input required type=email name=email></label>
-<label>URL <input type=url name=url></label>
-<input type=submit value="Continue...">
+<form action=/vcf/ method=post autocomplete=on>
+<input required type=text name=name placeholder="Name">
+<input required type=text name=organization placeholder="Organisation">
+<input type=text name=address-line1 placeholder="Street">
+<input type=text name=address-level2 placeholder="City">
+<input type=text name=country-name placeholder="Country">
+<input type=text name=postal-code placeholder="Postal code">
+<input type=tel name=tel placeholder="Telephone">
+<input required type=email name=email placeholder="email@example.com">
+<input type=url name=url placeholder="https://example.com">
+<input type=submit value="Create VCF">
 </form>
-
-
 
 </body>
 </html>
