Converted to Heredoc

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ box-sizing: border-box;  display: block;
 <input type=tel name=tel placeholder="Telephone">
 <input required type=email name=email placeholder="email@example.com">
 <input type=url name=url placeholder="https://example.com">
-<input type=submit value="Create VCF">
+<input type=submit value="Create VCard">
 </form>
 
 <p><a href=https://github.com/kaihendry/autofill2vcard>MIT licensed source code</a></p>
