--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ box-sizing: border-box;  display: block;
 </head>
 <body>
 
-<form action=/vcf/ method=post autocomplete=on>
+<form action=/vcard.php method=post autocomplete=on>
 <input required type=text name=name placeholder="Name">
 <input required type=text name=organization placeholder="Organisation">
 <input type=text name=street-address placeholder="Street">
